@@ -5,9 +5,6 @@ import xyz.vikkivuk.chaosmod.world.features.treedecorators.HellButOverworldTrunk
 import xyz.vikkivuk.chaosmod.world.features.treedecorators.HellButOverworldLeaveDecorator;
 import xyz.vikkivuk.chaosmod.world.features.treedecorators.HellButOverworldFruitDecorator;
 import xyz.vikkivuk.chaosmod.init.ChaosmodModEntities;
-import xyz.vikkivuk.chaosmod.init.ChaosmodModBiomes;
-
-import net.minecraftforge.common.BiomeDictionary;
 
 import net.minecraft.world.level.levelgen.placement.SurfaceWaterDepthFilter;
 import net.minecraft.world.level.levelgen.placement.NoiseThresholdCountPlacement;
@@ -33,47 +30,37 @@ import net.minecraft.util.valueproviders.ConstantInt;
 import net.minecraft.sounds.SoundEvent;
 import net.minecraft.sounds.Music;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.resources.ResourceKey;
 import net.minecraft.data.worldgen.placement.PlacementUtils;
 import net.minecraft.data.worldgen.features.VegetationFeatures;
 import net.minecraft.data.worldgen.features.FeatureUtils;
 import net.minecraft.data.worldgen.BiomeDefaultFeatures;
-import net.minecraft.data.BuiltinRegistries;
-import net.minecraft.core.Registry;
 
 import java.util.List;
 
 import com.google.common.collect.ImmutableList;
 
 public class HellButOverworldBiome {
-	public static final Climate.ParameterPoint PARAMETER_POINT = new Climate.ParameterPoint(Climate.Parameter.span(0.571428571429f, 1.428571428571f),
-			Climate.Parameter.span(-1.428571428571f, -0.571428571429f), Climate.Parameter.span(0.081428571429f, 0.938571428571f),
-			Climate.Parameter.span(0.371428571429f, 1.228571428571f), Climate.Parameter.point(0),
-			Climate.Parameter.span(-1.267564417216f, -0.410421560074f), 0);
-	public static final Climate.ParameterPoint PARAMETER_POINT_UNDERGROUND = new Climate.ParameterPoint(Climate.Parameter.span(-1, 1),
-			Climate.Parameter.span(-1, 1), Climate.Parameter.span(-2.49f, 3.51f), Climate.Parameter.span(-2.2f, 3.8f),
-			Climate.Parameter.span(0.2f, 0.9f), Climate.Parameter.span(-3.838992988645f, 2.161007011355f), 0);
+	public static final List<Climate.ParameterPoint> PARAMETER_POINTS = List.of(
+			new Climate.ParameterPoint(Climate.Parameter.span(0.4f, 1.6f), Climate.Parameter.span(-1.6f, -0.4f), Climate.Parameter.span(-0.08999999999999997f, 1.1099999999999999f), Climate.Parameter.span(0.20000000000000007f, 1.4f),
+					Climate.Parameter.point(0.0f), Climate.Parameter.span(-1.4389929886453405f, -0.2389929886453407f), 0),
+			new Climate.ParameterPoint(Climate.Parameter.span(0.4f, 1.6f), Climate.Parameter.span(-1.6f, -0.4f), Climate.Parameter.span(-0.08999999999999997f, 1.1099999999999999f), Climate.Parameter.span(0.20000000000000007f, 1.4f),
+					Climate.Parameter.point(1.0f), Climate.Parameter.span(-1.4389929886453405f, -0.2389929886453407f), 0));
+	public static final List<Climate.ParameterPoint> UNDERGROUND_PARAMETER_POINTS = List.of(new Climate.ParameterPoint(Climate.Parameter.span(0.4f, 1.6f), Climate.Parameter.span(-1.6f, -0.4f),
+			Climate.Parameter.span(-0.08999999999999997f, 1.1099999999999999f), Climate.Parameter.span(0.20000000000000007f, 1.4f), Climate.Parameter.span(0.2f, 0.9f), Climate.Parameter.span(-1.4389929886453405f, -0.2389929886453407f), 0));
 
 	public static Biome createBiome() {
-		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(-3407872).waterColor(-52429).waterFogColor(-52429).skyColor(-3407872)
-				.foliageColorOverride(-3407872).grassColorOverride(-3407821)
-				.ambientLoopSound(new SoundEvent(new ResourceLocation("music.nether.nether_wastes")))
-				.backgroundMusic(new Music(new SoundEvent(new ResourceLocation("music.nether.nether_wastes")), 12000, 24000, true)).build();
+		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(-3407872).waterColor(-52429).waterFogColor(-52429).skyColor(-3407872).foliageColorOverride(-3407872).grassColorOverride(-3407821)
+				.ambientLoopSound(new SoundEvent(new ResourceLocation("music.nether.nether_wastes"))).backgroundMusic(new Music(new SoundEvent(new ResourceLocation("music.nether.nether_wastes")), 12000, 24000, true)).build();
 		BiomeGenerationSettings.Builder biomeGenerationSettings = new BiomeGenerationSettings.Builder();
-		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION, PlacementUtils.register("chaosmod:tree_hell_but_overworld",
-				FeatureUtils.register("chaosmod:tree_hell_but_overworld", Feature.TREE,
-						new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(Blocks.NETHER_QUARTZ_ORE.defaultBlockState()),
-								new StraightTrunkPlacer(7, 2, 0), BlockStateProvider.simple(Blocks.NETHER_BRICK_FENCE.defaultBlockState()),
-								new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1))
-								.decorators(ImmutableList.of(HellButOverworldLeaveDecorator.INSTANCE, HellButOverworldTrunkDecorator.INSTANCE,
-										HellButOverworldFruitDecorator.INSTANCE))
-								.build()),
-				List.of(CountPlacement.of(3), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0),
-						PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				PlacementUtils.register("chaosmod:grass_hell_but_overworld", VegetationFeatures.PATCH_GRASS,
-						List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 4), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE,
-								BiomeFilter.biome())));
+				PlacementUtils.register("chaosmod:tree_hell_but_overworld",
+						FeatureUtils.register("chaosmod:tree_hell_but_overworld", Feature.TREE,
+								new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(Blocks.NETHER_QUARTZ_ORE.defaultBlockState()), new StraightTrunkPlacer(7, 2, 0),
+										BlockStateProvider.simple(Blocks.NETHER_BRICK_FENCE.defaultBlockState()), new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1))
+										.decorators(ImmutableList.of(HellButOverworldLeaveDecorator.INSTANCE, HellButOverworldTrunkDecorator.INSTANCE, HellButOverworldFruitDecorator.INSTANCE)).build()),
+						List.of(CountPlacement.of(3), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0), PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
+		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION, PlacementUtils.register("chaosmod:grass_hell_but_overworld", VegetationFeatures.PATCH_GRASS,
+				List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 4), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE, BiomeFilter.biome())));
 		BiomeDefaultFeatures.addDefaultCarversAndLakes(biomeGenerationSettings);
 		BiomeDefaultFeatures.addDefaultOres(biomeGenerationSettings);
 		BiomeDefaultFeatures.addSurfaceFreezing(biomeGenerationSettings);
@@ -95,13 +82,7 @@ public class HellButOverworldBiome {
 		mobSpawnInfo.addSpawn(MobCategory.MONSTER, new MobSpawnSettings.SpawnerData(ChaosmodModEntities.MOTH_OF_AGGREVATION.get(), 20, 4, 4));
 		mobSpawnInfo.addSpawn(MobCategory.MONSTER, new MobSpawnSettings.SpawnerData(ChaosmodModEntities.VIKKIVUK.get(), 20, 4, 4));
 		mobSpawnInfo.addSpawn(MobCategory.MONSTER, new MobSpawnSettings.SpawnerData(ChaosmodModEntities.TRIDENT.get(), 20, 4, 4));
-		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.NONE).biomeCategory(Biome.BiomeCategory.NONE).temperature(2f).downfall(0f)
-				.specialEffects(effects).mobSpawnSettings(mobSpawnInfo.build()).generationSettings(biomeGenerationSettings.build()).build();
-	}
-
-	public static void init() {
-		BiomeDictionary.addTypes(
-				ResourceKey.create(Registry.BIOME_REGISTRY, BuiltinRegistries.BIOME.getKey(ChaosmodModBiomes.HELL_BUT_OVERWORLD.get())),
-				BiomeDictionary.Type.NETHER);
+		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.NONE).biomeCategory(Biome.BiomeCategory.NONE).temperature(2f).downfall(0f).specialEffects(effects).mobSpawnSettings(mobSpawnInfo.build())
+				.generationSettings(biomeGenerationSettings.build()).build();
 	}
 }
